Add FnO RDF-based function loading via FnoDescriptionProvider